complete game files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="row">
             <h1 id="heading">Find the buried teasure!</h1>
             <h5>Click on image 👇</h5>
-            <img src="https://github.com/rabbidwan/buried-treasure/blob/master/img/treasuremap.png" width="400" height="400" alt="treasure-map" id="map">
+            <img src="https://github.com/rabbidwan/buried-treasure/blob/master/img/treasuremap.png" width="400"
+                height="400" alt="treasure-map" id="map">
             <p id="distance"></p>
         </div>
         <div class="win-part">
